--- a/index-multiple-account.html
+++ b/index-multiple-account.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Whatsapp API by Ngekoding</title>
+	<title>Whatsapp API by Deves Tecnology</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- This parts is optional, just for improve the styles -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -75,7 +75,7 @@
 
 	<div id="app">
 		<h1>Whatsapp API</h1>
-		<p>Powered by Ngekoding</p>
+		<p>Powered by Deves Tecnology</p>
 		<div class="form-container">
 			<label for="client-id">ID</label><br>
 			<input type="text" id="client-id" placeholder="Masukkan ID">
